# bazel-cache

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  bazel-cache.go  deps.bzl  go.mod  go.sum
cache/: BUILD.bazel  cache.go  registry.go
cache/badger/: BUILD.bazel  badger.go  badger_test.go
cache/disk/: BUILD.bazel  disk.go
cache/gcs/: BUILD.bazel  gcs.go
cache/ipfs/: BUILD.bazel  ipfs.go  ipfs_test.go  root.go
cache/ipfs/api/: BUILD.bazel  api.go
server/: BUILD.bazel  ac.go  bytestream.go  cacheex.go  capabilities.go  cas.go  server.go
tools/: bazel
utils/: BUILD.bazel  expectedsizereader.go  funccloser.go  gate.go  hash.go  loglevelflag.go  nopreadwritecloser.go  readwritecounter.go  urlvaluesex.go
utils/hedged/: BUILD.bazel  hedged.go
