load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(
    name = "gazelle",
    args = [
        "-go_proto_compiler=@io_bazel_rules_go//proto:gogofaster_proto",
        "-go_grpc_compiler=@io_bazel_rules_go//proto:gogofaster_grpc",
    ],
    prefix = "github.com/znly/bazel-cache",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "bazel-cache_lib",
    srcs = ["bazel_cache.go"],
    importpath = "github.com/znly/bazel-cache",
    visibility = ["//visibility:private"],
    deps = [
        "//server",
        "//utils",
        "@com_github_spf13_cobra//:cobra",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_binary(
    name = "bazel-cache",
    embed = [":bazel-cache_lib"],
    visibility = ["//visibility:public"],
)
