load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cache",
    srcs = [
        "cache.go",
        "registry.go",
    ],
    importpath = "github.com/znly/bazel-cache/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//utils",
        "//utils/hedged",
    ],
)
