load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/remote/execution/v2 @com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library
# gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/semver @com_github_bazelbuild_remote_apis//build/bazel/semver:go_default_library

go_library(
    name = "server",
    srcs = [
        "ac.go",
        "bytestream.go",
        "cacheex.go",
        "capabilities.go",
        "cas.go",
        "server.go",
    ],
    importpath = "github.com/znly/bazel-cache/server",
    visibility = ["//visibility:public"],
    deps = [
        "//cache",
        "//cache/disk",
        "//cache/gcs",
        "//cache/ipfs",
        "//utils",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/semver:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap/ctxzap",
        "@com_github_mostynb_go_grpc_compression//lz4",
        "@com_github_mostynb_go_grpc_compression//snappy",
        "@com_github_mostynb_go_grpc_compression//zstd",
        "@com_github_spf13_cobra//:cobra",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//encoding/gzip",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
    ],
)
