load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "expectedsizereader.go",
        "funccloser.go",
        "gate.go",
        "hash.go",
        "loglevelflag.go",
        "nopreadwritecloser.go",
        "readwritecounter.go",
        "urlvaluesex.go",
    ],
    importpath = "github.com/znly/bazel-cache/utils",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_zap//zapcore"],
)
