load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "badger",
    srcs = ["badger.go"],
    importpath = "github.com/znly/bazel-cache/cache/badger",
    visibility = ["//visibility:public"],
    deps = [
        "//cache",
        "@com_github_dgraph_io_badger_v3//:badger",
        "@com_github_dgraph_io_badger_v3//options",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap/ctxzap",
        "@com_github_klauspost_compress//zstd",
        "@com_github_reusee_fastcdc_go//:fastcdc-go",
        "@com_github_savetherbtz_zstd_seekable_format_go//:zstd-seekable-format-go",
        "@org_uber_go_multierr//:multierr",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "badger_test",
    srcs = ["badger_test.go"],
    race = "on",
    deps = [
        ":badger",
        "//cache",
        "@com_github_stretchr_testify//assert",
    ],
)
