load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "badger",
    srcs = ["badger.go"],
    importpath = "github.com/znly/bazel-cache/cache/badger",
    visibility = ["//visibility:public"],
    deps = [
        "//cache",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap/ctxzap",
        "@com_github_ipfs_go_cid//:go-cid",
        "@com_github_ipfs_go_ipfs_chunker//:go-ipfs-chunker",
        "@com_github_ipfs_go_ipfs_http_client//:go-ipfs-http-client",
        "@com_github_ipfs_go_ipld_format//:go-ipld-format",
        "@com_github_ipfs_go_merkledag//:go-merkledag",
        "@com_github_ipfs_go_mfs//:go-mfs",
        "@com_github_ipfs_go_unixfs//:go-unixfs",
        "@com_github_ipfs_go_unixfs//importer/helpers",
        "@com_github_ipfs_go_unixfs//importer/trickle",
        "@com_github_ipfs_go_unixfs//io",
        "@com_github_klauspost_compress//zstd",
        "@com_github_reusee_fastcdc_go//:fastcdc-go",
        "@com_github_savetherbtz_zstd_seekable_format_go//:zstd-seekable-format-go",
        "@org_uber_go_multierr//:multierr",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "badger_test",
    srcs = ["badger_test.go"],
    #race = "on",
    deps = [
        ":badger",
        "//cache",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap/ctxzap",
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//:zap",
    ],
)
