load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gcs",
    srcs = ["gcs.go"],
    importpath = "github.com/znly/bazel-cache/cache/gcs",
    visibility = ["//visibility:public"],
    deps = [
        "//cache",
        "//utils",
        "@com_google_cloud_go_storage//:storage",
        "@org_golang_google_api//googleapi",
    ],
)
